changed path.of to paths.get in file download method